cmake_minimum_required(VERSION 2.8.7)
enable_testing()
add_definitions(-std=c++11)
include(CheckIncludeFileCXX)
#include(CheckFunctionExists)
include(CheckLibraryExists)
project(sitepassword CXX)
set(prefix      ${CMAKE_INSTALL_PREFIX})
set(exec_prefix ${CMAKE_INSTALL_PREFIX})
set(libdir      ${CMAKE_INSTALL_PREFIX}/lib)
set(includedir  ${CMAKE_INSTALL_PREFIX}/include)
set(CMAKE_CXX_FLAGS                "-Wall -O3 -std=c++0x -Werror -Wctor-dtor-privacy -Wuninitialized -Winit-self -Wmissing-include-dirs -Wfloat-equal -Wshadow -Wpointer-arith -Wunreachable-code -Wold-style-cast -Weffc++")
#set (CMAKE_REQUIRED_INCLUDES "/usr/local/include")
#CHECK_INCLUDE_FILE_CXX(rumpelstiltskin.hpp RUMPELSTILTSKIN_INCLUDE)
#IF(RUMPELSTILTSKIN_INCLUDE)
#ELSE(RUMPELSTILTSKIN_INCLUDE)
#    MESSAGE(FATAL_ERROR "No rumpelstiltskin.hpp header found")
#ENDIF(RUMPELSTILTSKIN_INCLUDE)
add_executable(sitepassword sitepassword.cpp)
target_link_libraries(sitepassword rumpeltree++ boost_filesystem boost_system)
